fix(league): UserCurrentLeagueInfo 를 leagueMember 의 status 로 대체